--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 
 		<div class ="headerInner">
 
-			<img src="ろごろごろご.png" id="rogo" align="left">
+			<img src="rogo.png" id="rogo" align="left">
 
 			<ul id="nav">
 				<li><a href="#about"><img src="">about</a></li>
